<?xml version="1.0"?>
<package format="2">
  <name>lslidar_n301_driver</name>
  <version>1.2.0</version>
  <description>ROS device driver for Leishen N301 lidar.</description>
  <maintainer email="shaohuashu@lslidar.com">Nick Shu</maintainer>
  <author>Nick Shu</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>lslidar_n301_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>lslidar_n301_msgs</exec_depend>

  <depend>diagnostic_updater</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>